--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,30 +1,47 @@
+<?xml version="1.0" encoding="utf-8"?>
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
     android:viewportWidth="108"
     android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
-    <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+
+  <!-- Rounded rectangle background -->
+  <path
+      android:fillColor="#00796B"
+      android:strokeColor="#004D40"
+      android:strokeWidth="2"
+      android:pathData="M28,4L80,4Q104,4 104,28L104,80Q104,104 80,104L28,104Q4,104 4,80L4,28Q4,4 28,4Z" />
+
+  <!-- Split background effect -->
+  <path
+      android:fillColor="#26A69A"
+      android:pathData="M4,52L54,4L80,4Q104,4 104,28L104,80Q104,104 80,104L28,104Q4,104 4,80Z" />
+
+  <!-- C letter stylized as the left contour of the chess piece -->
+  <path
+      android:fillColor="#FFFFFF"
+      android:strokeColor="#004D40"
+      android:strokeWidth="1"
+      android:pathData="M40,78C28,78 25,65 30,55C35,45 46,40 54,40C54,40 54,45 54,45C48,45 40,48 37,55C33,63 35,73 43,73Z" />
+
+  <!-- G letter stylized as the right contour of the chess piece -->
+  <path
+      android:fillColor="#FFFFFF"
+      android:strokeColor="#004D40"
+      android:strokeWidth="1"
+      android:pathData="M68,78C80,78 83,65 78,55C73,45 62,40 54,40C54,40 54,45 54,45C60,45 68,48 71,55C75,63 73,73 65,73L68,63L60,63L60,73Z" />
+
+  <!-- Chess piece (queen) top crown -->
+  <path
+      android:fillColor="#FFFFFF"
+      android:strokeColor="#004D40"
+      android:strokeWidth="1"
+      android:pathData="M40,40L54,25L68,40L60,40L54,35L48,40Z" />
+
+  <!-- Base of the chess piece -->
+  <path
+      android:fillColor="#FFFFFF"
+      android:strokeColor="#004D40"
+      android:strokeWidth="1"
+      android:pathData="M40,78L68,78Q70,78 70,80L70,83Q70,85 68,85L40,85Q38,85 38,83L38,80Q38,78 40,78Z" />
 </vector>
